--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=heroComics
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=HeroBDD;encrypt=false
+spring.datasource.username=sa
+spring.datasource.password=root
+spring.jpa.show-sql=true
+server.port=8081
